<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutFragment"
    android:orientation="vertical"

    android:padding="@dimen/medium_spacing"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about__title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about__description"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_marginTop="@dimen/small_spacing"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about__credits"

        android:layout_marginTop="@dimen/medium_spacing"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about__name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_marginTop="@dimen/small_spacing"
        />

    <TextView
        android:autoLink="email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about__email"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_marginTop="@dimen/small_spacing"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about__github"
        android:autoLink="web"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_marginTop="@dimen/small_spacing"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about__linkedin"
        android:autoLink="web"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_marginTop="@dimen/small_spacing"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about__website"
        android:autoLink="web"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_marginTop="@dimen/small_spacing"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about__marvel"
        android:layout_marginTop="@dimen/large_spacing"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about__marvel_url"
        android:layout_marginTop="@dimen/small_spacing"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:autoLink="web"
        />

</LinearLayout>